[4.0-beta2 - 29.06.2023]
	* Bump required MyAAC version to 0.8.9 (needs plugins/ folder in twig paths)
	* Fix for 0.9-alpha: cannot find gifts/history
	* Max count of items increased to 65535

[4.0-beta - 06.06.2023]
	* Edit items
	* Move items (up, down)
	* Edit categories, reset categories
	* Fix colors in buy item page
	* Fix PACC image
	* Some other fixes

[3.1 - 25.03.2023]
	* move pages/payments into plugins/

[3.0.1 - 13.03.2023]
	* add gesior-shop-system-revscript.lua

[3.0 - 06.02.2022]
	* reorganise files, move most of them into plugins folder

[2.5 - 06.04.2022]
	* fix admin panel Gifts page not found (duplicated gifts.php)
	* fix typo

[2.4 - 22.04.2021]
	* remove some random debug message being popped, like: string(99) "<HERE ITEM IMAGE>"
	* fix PayPal sandbox URL + redirect after transaction
	* update cacert.pem from https://curl.se/ on install

[2.3 - 03.04.2021]
	* Fix problem with redirection after transaction has been made (PayPal redirect)
	* Do not override config.php after install - may upset some users ;)
	* Fix payment_type being ignored (Thanks to OtLand User: DukeeH)
	* (internal) Moving some SQL to schema.sql

[2.2.1 - 29.02.2020]
	* Force table links color to white (with !important css)

[2.2 - 02.12.2019]
	* Fix installation on some newest MySQL versions (slawkens)
	* Refactored code: (whiteblXK)
		* moved 'add offer' to admin panel
		* removed Homepay service
		* fixed delivering points in PagSeguro
		* full twig template support

[2.1.1 - 13.04.2019]
	* enable local SSL certificate verification (this fixes points being not delivered on same systems like UniServ on Windows)
	* write more debug/error information to paypal-error.log
	* (internal) remove @version tag from files

[2.1 - 26.06.2018]
	* check for php CURL extension on install and when running
	* fix for OTXServer, where doCreateItemEx function doesn't exists (in some older versions)
	* fixed default value of some MySQL columns
	* fixed Premium Account image (was wrong dir)
