@@ -1,6 +1,7 @@
 [4.0-beta2 - 29.06.2023]
 	* Bump required MyAAC version to 0.8.9 (needs plugins/ folder in twig paths)
 	* Fix for 0.9-alpha: cannot find gifts/history
+	* Don't allow buying by deleted player
 	* Max count of items increased to 65535
 
 [4.0-beta - 06.06.2023]
